--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       REDIS_PORT: 6379
       JWT_SECRET: change-me-in-production-use-long-secret
       EVOLUTION_API_URL: http://evolution-api:8080
-      EVOLUTION_API_KEY: ""
+      EVOLUTION_API_KEY: "B6D04C627EF9-4FC2-A1F6-6E357651931B"
       PORT: 3001
       CORS_ORIGIN: http://localhost:3000,http://frontend:3000
     ports:
@@ -47,7 +47,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    command: sh -c "npx prisma migrate deploy && node dist/main.js"
+    command: sh -c "npx prisma migrate deploy && (npx prisma db seed || echo 'Seed skipped') && node dist/src/main.js"
 
   frontend:
     build:
@@ -66,23 +66,36 @@ services:
 
   evolution-api:
     image: atendai/evolution-api:latest
+    restart: on-failure
     ports:
       - "8080:8080"
     environment:
-      SERVER_URL: http://evolution-api:8080
-      AUTHENTICATION_API_KEY: ""
-      DATABASE_ENABLED: "false"
-      DATABASE_CONNECTION_URI: ""
-      DATABASE_CONNECTION_CLIENT_NAME: ""
+      SERVER_URL: http://localhost:8080
+      SERVER_PORT: 8080
+      AUTHENTICATION_API_KEY: "B6D04C627EF9-4FC2-A1F6-6E357651931B"
+      AUTHENTICATION_EXPOSE_IN_FETCH_INSTANCES: "true"
+      DATABASE_PROVIDER: "postgresql"
+      DATABASE_ENABLED: "true"
+      DATABASE_CONNECTION_URI: "postgresql://postgres:postgres@postgres:5432/saas_whatsapp?schema=evolution"
+      DATABASE_SAVE_DATA_INSTANCE: "true"
+      DATABASE_SAVE_DATA_NEW_MESSAGE: "false"
+      DATABASE_SAVE_DATA_MESSAGE_UPDATE: "false"
+      DATABASE_SAVE_DATA_CONTACTS: "false"
+      DATABASE_SAVE_DATA_CHATS: "false"
       REDIS_ENABLED: "false"
       CACHE_REDIS_ENABLED: "false"
       CACHE_LOCAL_ENABLED: "true"
-      WEBHOOK_GLOBAL_URL: http://backend:3001/webhook
+      WEBHOOK_GLOBAL_URL: "http://backend:3001/webhook"
       WEBHOOK_GLOBAL_ENABLED: "true"
       WEBHOOK_GLOBAL_WEBHOOK_BY_EVENTS: "true"
       WEBHOOK_EVENTS_MESSAGES_UPSERT: "true"
+      WEBHOOK_EVENTS_MESSAGES_UPDATE: "true"
       WEBHOOK_EVENTS_CONNECTION_UPDATE: "true"
-      LOG_LEVEL: "ERROR"
+      WEBHOOK_EVENTS_QRCODE_UPDATED: "true"
+      LOG_LEVEL: "WARN"
+    depends_on:
+      postgres:
+        condition: service_healthy
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
